--- a/app/views/academy/questions/_form.html.erb
+++ b/app/views/academy/questions/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@academy_question) do |f| %>
+
   <% if @academy_question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@academy_question.errors.count, "error") %> prohibited this academy_question from being saved:</h2>
@@ -11,26 +12,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+
   <div class="field">
     <%= f.label :category_id %><br>
-    <%= f.number_field :category_id %>
+    <%= f.collection_select(:category_id,@categories,:id,:name, :include_blank => 'Escolha uma categoria') unless @categories.blank? %>
   </div>
+
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :text %><br>
-    <%= f.text_field :text %>
+    <%= f.text_area :text %>
   </div>
-  <div class="field">
-    <%= f.label :is_deleted %><br>
-    <%= f.number_field :is_deleted %>
-  </div>
+
   <div class="field">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
