--- a/app/views/ads/_messages.html.erb
+++ b/app/views/ads/_messages.html.erb
@@ -2,20 +2,17 @@
   <%#  if there is no messages for this user  %>
   <p>"Não existem mensagens neste anuncio"</p>
   <% if @ad.user_id != current_user.id %><%#  and if the logged user isn't the owner  %>
-    
+
     <%#  create the message's form  %>
     <%= form_for @message, :url => ad_new_messages_path(@ad.id),:html => {:id => "comment_ad",:ajax_path => ad_new_messages_path(@ad.id) } do |m| %>
-      
+
       <div class="field">
         <%= m.text_area :text,:id => "text_comment",:rows=>1,:class=> "form-control counted" ,:placeholder => "Responder"%>
         <h6 class="pull-right" id="counter">144 characters remaining</h6>
       </div>
 
-      <div class="field" hidden="true">
-        <%= m.label :user_id %><br>
-        <%= m.text_field :user_id, :value => @ad.id,:readonly => true %>
-      </div>
-      
+        <%= m.hidden_field :user_id, :value => @ad.id,:readonly => true %>
+
       <%= m.submit "Enviar" %>
     <% end %>
   <% end %>
@@ -24,12 +21,12 @@
   <% @talk.each do |t| %>
 
     <div class="panel panel-default widget" id="accordion">
-      
+
       <div class="panel-heading">
         <h4 class="panel-title">
           <span class="fa fa-comment"></span>
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#<%= t.user_receiver(current_user) %>">Mensagens do Utilizador ID: <%= t.user_receiver(current_user) %></a>
-          
+
           <%= link_to "Fechar Negócio", done_message_path(id_ad: @ad.id, user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende fechar este negócio?" }, :class => "btn btn-primary ", :style => ""  if @ad.user_id == current_user.id %>
 
           <%= link_to('<span style="float: right;" class="fa fa-times-circle"></span>'.html_safe, cancel_message_path(id_ad: @ad.id,user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende eliminar a troca de mensagem com este utilizador?" }) if @ad.user_id == current_user.id  %>
@@ -39,13 +36,13 @@
 
       <div id="<%= t.user_receiver(current_user) %>" class="panel-collapse collapse">
         <div class="panel-body">
-          
+
           <% t.messages.each do |m| %>
             <%= render "messages/show" , :message => m, :talk => t.id %>
           <% end %>
-          
+
           <%= form_for @message, :url => ad_new_messages_path(@ad.id),:html => {:id => "comment_ad",:ajax_path => ad_new_messages_path(@ad.id) } do |m| %>
-            
+
             <div class="field">
               <%= m.text_field :text,:id => "text_comment",:rows=>1,:class=> "form-control counted" ,:placeholder => "Responder"%>
               <h6 class="pull-right" id="counter">144 characters remaining</h6>
