--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -1,28 +1,30 @@
-
 <p id="notice"><%= notice %></p>
 
 
 <div class="col-lg-12">
     <section class="panel">
         <header class="panel-heading">
+
           <div class="pull-right">
                 <button class="btn btn-success btn-xs">
                   <i class="icon-ok"></i>
+
                 </button>
                 <button class="btn btn-primary btn-xs">
-                  <i class="icon-pencil"></i>
+                  
+                  <%= link_to '<i class="icon-pencil"></i>'.html_safe , edit_academy_answer_path(answer) %>
                 </button>
                 <button class="btn btn-danger btn-xs">
                   <i class="icon-trash "></i>
                 </button>
             </div>
           <div class="" >
-            <h3> <%= @academy_question.title %> </h3>
+            Resposta
           </div>
 
         </header>
 
-
+        
         <div class="panel-body">
           
             <div class="col-xs-2 col-md-2">
@@ -31,33 +33,12 @@
 
             <div class="col-xs-9 col-md-10 ">
               
-                  <%= @academy_question.text %>
-                  <p>
-                    <strong>Image url:</strong>
-                    <%= @academy_question.image_url %>
-                  </p>
-
+                  <%= answer.text %>
+                  
            </div>
-        
-           <span class="label pull-right" style="background-color: #<%= @academy_question.category.color %>">
-            <%= @academy_question.category.name %>
+         </div>
 
-          </span>
-
-
-         
-        </div>
-
-    </section>
+     </section>
 </div>
 
 
-<%= render "academy/answers/display_all" %>
-<%= render "academy/answers/form", :question => @academy_question %>
-
-
-
-
-
-<%= link_to 'Edit', edit_academy_question_path(@academy_question) %> |
-<%= link_to 'Back', academy_questions_path %>
