--- a/app/views/academy/answers/show.html.erb
+++ b/app/views/academy/answers/show.html.erb
@@ -1,39 +1,83 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Question:</strong>
-  <%= @academy_answer.question_id %>
-</p>
 
-<p>
-  <strong>User:</strong>
-  <%= @academy_answer.user_id %>
-</p>
+<div class="col-lg-12">
+    <section class="panel">
+        <header class="panel-heading">
+          <div class="pull-right">
+                <button class="btn btn-success btn-xs">
+                  <i class="icon-ok"></i>
+                </button>
+                <button class="btn btn-primary btn-xs">
+                  <i class="icon-pencil"></i>
+                </button>
+                <button class="btn btn-danger btn-xs">
+                  <i class="icon-trash "></i>
+                </button>
+            </div>
+          <div class="" >
+            
+          </div>
 
-<p>
-  <strong>Up:</strong>
-  <%= @academy_answer.up %>
-</p>
+        </header>
 
-<p>
-  <strong>Down:</strong>
-  <%= @academy_answer.down %>
-</p>
+        
+        <div class="panel-body">
+          
+            <div class="col-xs-2 col-md-2">
+              <img class="img-circle" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=70" alt="User Pic">
+            </div>
 
-<p>
-  <strong>Is deleted:</strong>
-  <%= @academy_answer.is_deleted %>
-</p>
+            <div class="col-xs-9 col-md-10 ">
+              
+                  <%= @academy_answer.text %>
+                  
+           </div>
+        
+          
+              <p>
+                <strong>Question:</strong>
+                <%= @academy_answer.question_id %>
+              </p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @academy_answer.image_url %>
-</p>
+              <p>
+                <strong>User:</strong>
+                
+              </p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @academy_answer.text %>
-</p>
+              <p>
+                <strong>Up:</strong>
+                <%= @academy_answer.up %>
+              </p>
+
+              <p>
+                <strong>Down:</strong>
+                <%= @academy_answer.down %>
+              </p>
+
+              <p>
+                <strong>Is deleted:</strong>
+                <%= @academy_answer.is_deleted %>
+              </p>
+
+              <p>
+                <strong>Image url:</strong>
+                <%= @academy_answer.image_url %>
+              </p>
+
+              <p>
+                <strong>Text:</strong>
+                
+              </p>
+
+                       
+                      </div>
+
+                  </section>
+</div>
+
+
+
 
 <%= link_to 'Edit', edit_academy_answer_path(@academy_answer) %> |
 <%= link_to 'Back', academy_answers_path %>
