--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -1,3 +1,18 @@
+<div class="well well-sm">
+        <strong>Meter Filtros</strong>
+        <div class="btn-group">
+            <a href="#" id="list" class="btn btn-default btn-sm">
+              <span class="fa fa-th-list"></span>
+              Respondidas</a> 
+              <a href="#" id="grid" class="btn btn-default btn-sm">
+              
+              <span class="fa fa-th"></span>Activas</a>
+              <a href="#" id="grid" class="btn btn-default btn-sm">
+              <span class="fa fa-truck"></span>Outras</a>
+
+        </div>
+ </div>
+
 <h1>Listing academy_questions</h1>
 
 <table>
