--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= csrf_meta_tags %>
 
 </head>
-<body style="background-color:#f5f5f5">
+<body style="background-color:#edeff0">
 
   <div id="header">
       <%= render "layouts/header"%>
