--- a/app/views/academy/answers/_show.html.erb
+++ b/app/views/academy/answers/_show.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="col-lg-12">
-    <section class="panel">
+    <section class="panel panel-success">
         <header class="panel-heading">
 
           <div class="pull-right">
