--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,14 +2,14 @@
   <div class="login-col-form_regist col-md-8">
      
          <div class="well col">
-            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
+            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Registo!</legend>
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name) ,:html=>{:class=>"form"}) do |f| %>
               <%= devise_error_messages! %>
 
 
               <div class="row">
                 
-                  <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :name, "Name" %>
+                  <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :name, "Nome" %>
                     <%= f.text_field :name,:id =>"name_sign_up", :class=>"form-control" %>
                      <span id="name_extra" class="textoextra"></span>
                   </div>
@@ -20,10 +20,10 @@
               </div>
           <div class="row">
                 
-                    <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :avatar,"Image" %>
+                    <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :avatar,"Imagem" %>
                         <%= f.file_field :avatar , :class=>"form-control"%>
                     </div>
-                    <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :city_id, "City " %>
+                    <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :city_id, "Cidade " %>
                       <%= f.collection_select(:city_id,@cities,:id,:city, :include_blank => 'Escolha uma opção' , :htlm=>{:class=>"form-control"}) %>
                     </div>
                 
@@ -48,7 +48,7 @@
                     <%= f.text_field :birthday, :label => "Date", :class=> 'datepicker' %>
                   </div>
                 
-                  <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :phone, "Phone"%>
+                  <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :phone, "Telefone"%>
                   <%= f.text_field :phone , :class=>"form-control"  %></div>
 
                
