[Update] Registration validations

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,14 @@
-  
+
   <div class="login-col-form_regist col-md-8">
-     
+
          <div class="well col">
-            <legend><a href="http://www.jquery2dotnet.com"><i class="glyphicon glyphicon-globe"></i></a> Registo!</legend>
+            <legend><i class="fa fa-pencil"></i> Registo </legend>
             <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name) ,:html=>{:class=>"form"}) do |f| %>
-              <%= devise_error_messages! %>
+
 
 
               <div class="row">
-                
+
                   <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :name, "Nome" %>
                     <%= f.text_field :name,:id =>"name_sign_up", :class=>"form-control" %>
                      <span id="name_extra" class="textoextra"></span>
@@ -16,42 +16,42 @@
                     <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :username, "Username" %>
                          <%= f.text_field :username , :class=>"form-control" %>
                     </div>
-                
+
               </div>
           <div class="row">
-                
+
                     <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :avatar,"Imagem" %>
                         <%= f.file_field :avatar , :class=>"form-control"%>
                     </div>
                     <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :city_id, "Cidade " %>
                       <%= f.collection_select(:city_id,@cities,:id,:city, :include_blank => 'Escolha uma opção' , :htlm=>{:class=>"form-control"}) %>
                     </div>
-                
+
           </div>
-            
-                
-            
+
+
+
              <div class="login_form_regist_items"><%= f.label :email %>
               <%= f.email_field :email, :autofocus => true , :class=>"form-control" %></div>
-            
+
             <div class="login_form_regist_items"><%= f.label :password %>
             <%= f.password_field :password  , :class=>"form-control" %></div>
 
             <div class="login_form_regist_items"><%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation  , :class=>"form-control" %></div>
-            
-            
+
+
              <div class="row">
-                
+
                    <div class="col-xs-6 col-md-6 field login_form_regist_items">
                     <%= f.label :birthday %><br />
                     <%= f.text_field :birthday, :label => "Date", :class=> "datepicker" %>
                   </div>
-                
+
                   <div class="col-xs-6 col-md-6 login_form_regist_items"><%= f.label :phone, "Telefone"%>
                   <%= f.text_field :phone , :class=>"form-control"  %></div>
 
-               
+
             </div>
             <div class="login_form_regist_items"><%= f.submit "Entrar" ,:class=>"btn btn-lg btn-primary btn-block" %></div>
 
@@ -59,7 +59,7 @@
               <%= render "devise/shared/links"  %>
             </div>
             <% end %>
-            
+
         </div>
-      
+
  </div>
