[Update Feature] Update right side bar

--- a/app/views/layouts/_sidebar_right_ad.html.erb
+++ b/app/views/layouts/_sidebar_right_ad.html.erb
@@ -1,34 +1,32 @@
-<div class="panel" style="padding:5px">
-<div class="panel-heading">
-            <h3 class="panel-title">Publicidade</h3>
-        </div>
+  <section class="panel">
+    <header class="panel-heading">Publicidade</header>
+    <div class="panel-body">
+      <ul class="thumbnails list-unstyled">
 
+          <li style="margin-bottom:-25px;">
+            <div class="thumbnail" style="padding: 0">
+              <div style="padding:4px">
+                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+              </div>
+            </div>
+          </li>
 
-<ul class="thumbnails list-unstyled">
+          <li style="margin-bottom:-25px;">
+            <div class="thumbnail" style="padding: 0">
+              <div style="padding:4px">
+                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+              </div>
+            </div>
+          </li>
 
-  <li style="margin-bottom:-25px;">
-    <div class="thumbnail" style="padding: 0">
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
-      </div>
+          <li style="margin-bottom:-25px;">
+            <div class="thumbnail" style="padding: 0">
+              <div style="padding:4px">
+                <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
+              </div>
+            </div>
+          </li>
+
+       </ul>
     </div>
-  </li>
-
-  <li style="margin-bottom:-25px;">
-    <div class="thumbnail" style="padding: 0">
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
-      </div>
-    </div>
-  </li>
-
-  <li style="margin-bottom:-25px;">
-    <div class="thumbnail" style="padding: 0">
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x40">
-      </div>
-    </div>
-  </li>
-
-</ul>
-</div>
+  </section>
