--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -36,63 +36,60 @@
         </div>
 </section>
 
-<div class="panel" style="padding:5px">
-<div class="panel-heading">
-            <h3 class="panel-title">Destaques</h3>
+<section class="panel">
+  <header class="panel-heading">Destaques</header>
+  <div class="panel-body">
+    <ul class="thumbnails list-unstyled">
+
+      <li style="margin-bottom: -25px">
+        <div class="thumbnail" style="padding: 0">
+          <span class="price" style="font-size: 8px">EVENTO</span>
+          <div style="padding:4px">
+            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
+          </div>
+          <div class="caption">
+            <p style="text-align:right">Nome do Anuncio/Evento</p>
+          </div>
         </div>
+      </li>
 
+      <li style="margin-bottom: -25px">
+        <div class="thumbnail" style="padding: 0">
+          <span class="price" style="font-size: 8px">EVENTO</span>
+          <div style="padding:4px">
+            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
+          </div>
+          <div class="caption">
+            <p style="text-align:right">Nome do Anuncio/Evento</p>
+          </div>
+        </div>
+      </li>
 
-<ul class="thumbnails list-unstyled">
+      <li style="margin-bottom: -25px">
+        <div class="thumbnail" style="padding: 0">
+          <span class="price" style="font-size: 8px">EVENTO</span>
+          <div style="padding:4px">
+            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
+          </div>
+          <div class="caption">
+            <p style="text-align:right">Nome do Anuncio/Evento</p>
+          </div>
+        </div>
+      </li>
 
-  <li style="margin-bottom: -25px">
-    <div class="thumbnail" style="padding: 0">
-      <span class="price" style="font-size: 8px">EVENTO</span>
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-      </div>
-      <div class="caption">
-        <p style="text-align:right">Nome do Anuncio/Evento</p>
-      </div>
-    </div>
-  </li>
+      <li style="margin-bottom: -25px">
+        <div class="thumbnail" style="padding: 0">
+          <span class="price" style="font-size: 8px">EVENTO</span>
+          <div style="padding:4px">
+            <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
+          </div>
+          <div class="caption">
+            <p style="text-align:right">Nome do Anuncio/Evento</p>
+          </div>
+        </div>
+      </li>
 
-  <li style="margin-bottom: -25px">
-    <div class="thumbnail" style="padding: 0">
-      <span class="price" style="font-size: 8px">EVENTO</span>
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-      </div>
-      <div class="caption">
-        <p style="text-align:right">Nome do Anuncio/Evento</p>
-      </div>
-    </div>
-  </li>
+    </ul>
 
-  <li style="margin-bottom: -25px">
-    <div class="thumbnail" style="padding: 0">
-      <span class="price" style="font-size: 8px">EVENTO</span>
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-      </div>
-      <div class="caption">
-        <p style="text-align:right">Nome do Anuncio/Evento</p>
-      </div>
-    </div>
-  </li>
-
-  <li style="margin-bottom: -25px">
-    <div class="thumbnail" style="padding: 0">
-      <span class="price" style="font-size: 8px">EVENTO</span>
-      <div style="padding:4px">
-        <img alt="300x200" style="width: 100%" src="http://placehold.it/100x50">
-      </div>
-      <div class="caption">
-        <p style="text-align:right">Nome do Anuncio/Evento</p>
-      </div>
-    </div>
-  </li>
-
-</ul>
-
-        
-</div>
+  </div>
+</section>
