--- a/app/views/academy/answers/_display_all.erb
+++ b/app/views/academy/answers/_display_all.erb
@@ -1,9 +1,4 @@
-
-
+<%#  For each answers call its display form  %>
 <% @answers.each do |answer| %>
-
 	<%= render "academy/answers/show" ,:answer => answer  %>
 <% end %>
-
-
-
