--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing ad</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Editar Anúncio</h3>
+  </div>
+  <div class="panel-body">
 
-<%= render 'form' %>
+    <%= render 'form' %>
+
+    </div>
+</div>
 
 <%= link_to 'Show', @ad %> |
 <%= link_to 'Back', myads_user_path(current_user.id) %>
